--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -54,6 +54,17 @@
     <string name="map_screen_event_end">Završetak</string>
     <string name="map_screen_more_info">Više informacija</string>
 
+    <!-- Translations for the Event details screen -->
+    <string name="event_details_screen_event_name">Ime eventa</string>
+    <string name="event_details_screen_back_button">Natrag</string>
+    <string name="event_details_screen_im_interested_button">Zainteresiran sam</string>
+    <string name="event_details_screen_unknown_location">Nepoznata lokacija</string>
+    <string name="event_details_screen_description">Opis</string>
+    <string name="event_details_screen_no_description">Nema opisa</string>
+    <string name="event_details_screen_tags">Tagovi</string>
+    <string name="event_details_interested_users">Zainteresirani korisnici</string>
+    <string name="event_details_screen_more_info">Više informacija</string>
+
     <!-- Data operations -->
     <string name="data_update_success">Radnja uspješno obavljena</string>
     <string name="data_update_failure">Radnja nije uspješna</string>
