--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -65,6 +65,8 @@
     <string name="event_details_screen_tags">Tagovi</string>
     <string name="event_details_interested_users">Zainteresirani korisnici</string>
     <string name="event_details_screen_more_info">Više informacija</string>
+    <string name="event_details_screen_interested">Event dodan u interese!</string>
+    <string name="event_details_screen_uninterested">Event maknut iz interesa!</string>
 
     <!-- Data operations -->
     <string name="data_update_success">Radnja uspješno obavljena</string>
