--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,8 @@
     <string name="map_screen_event_start">Starts at</string>
     <string name="map_screen_event_end">Ends at</string>
     <string name="map_screen_more_info">More info</string>
+    <string name="map_screen_search_icon_description">Search</string>
+    <string name="map_screen_search_events_placeholder">Search</string>
 
     <!-- Translations for the Event details screen -->
     <string name="event_details_screen_event_name">Event name</string>
