fixed auth navigation flow

--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -54,6 +54,7 @@
     <string name="map_screen_event_end">Završetak</string>
     <string name="map_screen_more_info">Više informacija</string>
     <string name="map_screen_search_icon_description">Pretraga</string>
+    <string name="map_screen_clear_icon_description">Clear</string>
     <string name="map_screen_search_events_placeholder">Pretraga</string>
 
     <!-- Translations for the Event details screen -->
