--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="profile_screen_logout">Log out</string>
     <string name="profile_screen_logout_confirm">Yes, log out</string>
     <string name="profile_screen_logout_desc">Are you sure you want to log out?</string>
+    <string name="profile_screen_save">Save</string>
 
 
     <!-- Translations for the login screen -->
@@ -76,6 +77,8 @@
     <string name="event_details_screen_more_info">More info</string>
     <string name="event_details_screen_interested">Event added to interests!</string>
     <string name="event_details_screen_uninterested">Event removed from interests!</string>
+    <string name="event_details_screen_no_interested_users">No users have currently signed up for the event</string>
+    <string name="event_details_screen_user">User</string>
 
     <!-- Data operations -->
     <string name="data_update_success">Operation successful</string>
